infra-terraform/vpc.tf
resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"
    tags = {
        Name = "image-video-vpc"
    }
}

resource "aws_subnet" "main" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "ap-south-1a"
    tags = {
        Name = "image-video-subnet"
    }
}

resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id
    tags = {
        Name = "image-video-igw"
    }
}

resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.main.id  
}

resource "aws_route" "r" {
  route_table_id = aws_route_table.rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.main.id
}

resource "aws_route_table_association" "a" {
  subnet_id = aws_subnet.main.id
  route_table_id = aws_route_table.rt.id
}
